Switch to Spark SQL support
The Neon framework switched from Shark to Spark SQL, so this
dashboard needs to follow the switch.

--- a/app/partials/databaseConfig.html
+++ b/app/partials/databaseConfig.html
@@ -44,7 +44,7 @@
               <label for="datastore-select">Datastore Type</label>
               <select id="datastore-select" class="form-control" ng-model="datastoreSelect">
                 <option value="mongo">Mongo</option>
-                <option value="shark">Shark</option>
+                <option value="sparksql">Spark SQL</option>
               </select>
             </div>
 
