--- a/app/css/directives/circularHeatForm.css
+++ b/app/css/directives/circularHeatForm.css
@@ -17,4 +17,17 @@
 .circularheatform {
     height:100%;
     width:100%;
+    margin:0px;
+    overflow: auto;
+    padding: 20px;
+}
+
+.circularheatform h4 {
+    height: 12%;
+    margin: 0px;
+}
+
+.circularheatform .circularheatchart {
+    height: 88%;
+    width: 100%;
 }
