--- a/app/partials/circularHeatForm.html
+++ b/app/partials/circularHeatForm.html
@@ -1,4 +1,2 @@
-<div class="well">
-	<h4>Most active times of the week were <span class="count text-primary">{{maxTime}}</span> and <span class="count text-primary">{{maxDay}}</span></h4>
-	<div circular-heat-chart cell-values="data"></div>
-</div>
+<h4>Most active times of the week were <span class="count text-primary" ng-bind="maxTime"></span> and <span class="count text-primary" ng-bind="maxDay"></span></h4>
+<div circular-heat-chart cell-values="data"></div>
