--- a/app/css/directives/tagCloud.css
+++ b/app/css/directives/tagCloud.css
@@ -43,3 +43,11 @@
 		font-size: 12px;
 	}
 }
+
+.tagcloud-container {
+	height: 100%;
+	width: 100%;
+	overflow-x: hidden;
+	overflow-y: auto;
+	padding: 20px;
+}
