--- a/app/css/style.css
+++ b/app/css/style.css
@@ -476,7 +476,7 @@ a.navbar-text:focus{
     width: 100%;
     z-index: 1040;
     /* Disable transform used in Bootstrap 3.2.0 Affix plugin.  This hides any modals that are defined 
-       inside the nav. */
+       inside the nav and breaks the database-overlay .*/
     transform: none;
     -webkit-transform: none;
 }
@@ -837,6 +837,19 @@ label{
     width: 100%;
     margin: 0px;
     padding: 0px;
+}
+
+.visualization-drag-handle {
+    cursor: move;
+    position: absolute;
+    height: 20px;
+    width: 100%;
+    z-index: 2;
+}
+
+.visualization-drag-handle:hover {
+    background-color: #dddddd;
+    opacity: 0.5;
 }
 
 .gridster {
