--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -19,9 +19,26 @@
 }
 .well-map .chart-options .popover {
 	top: 45px;
+	position: absolute;
+	z-index: 1000;
 }
+
+.heat-map {
+	height: 100%;
+	width: 100%;
+}
+
+.heat-map .legend-item{
+	color: #555555;
+	font-size: 14px;
+	text-shadow: 1px 1px 2px rgba(255,255,255,0.9);
+}
+
 .heat-map .map-field-form {
-	padding: 15px 30px 10px;
+	padding: 20px 20px 10px 50px;
+	position: absolute;
+	width: 100%;
+	z-index: 1000;
 }
 
 .heat-map .map-field-form .filter-reset{
@@ -39,7 +56,9 @@
 	border: 1px solid #bbbbbb;
 	border-radius: 0 0 4px 4px;
 	width: auto !important;
-	margin: 0 -1px !important;
+	height: 100% !important;
+	position: static;
+	margin: 0px -1px 0px -1px !important;
 	/*box-shadow: 0 1px 4px rgba(154, 154, 154, 0.3);*/
 }
 
@@ -47,6 +66,11 @@
 	bottom: 0;
 	color: #555;
 	text-shadow: 0 1px 0 rgba(255,255,255,0.7);
+}
+
+.heat-map .olControlZoom {
+	top: 20px;
+	left: 20px;
 }
 
 .heat-map .olControlZoom a{
@@ -60,14 +84,15 @@
 	background-color: rgba(57, 181, 74, 1);
 }
 
-.olPopup {
+.heatmap .olPopup {
 	font-size: 12px;
+	z-index: 1060;
 }
 
-.olPopup table {
+.heatmap .olPopup table {
 	margin: 2px;
 }
-.olPopup td, .olPopup th {
+
+.heatmap .olPopup td, .olPopup th {
 	padding: 2px;
 }
-
