--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -15,84 +15,88 @@
  */
 
 .well-map{
-	padding: 0;
+    padding: 0;
 }
 .well-map .chart-options .popover {
-	top: 45px;
-	position: absolute;
-	z-index: 1000;
+    top: 45px;
+    position: absolute;
+    z-index: 1000;
 }
 
 .heat-map {
-	height: 100%;
-	width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .heat-map .legend-item{
-	color: #555555;
-	font-size: 14px;
-	text-shadow: 1px 1px 2px rgba(255,255,255,0.9);
+    background-color: #fff;
+    border: 1px #aaa solid;
+    border-radius: 5px;
+    color: #555555;
+    font-size: 14px;
+    margin: 2px;
+    opacity: .8;
+    padding: 3px;
 }
 
 .heat-map .map-field-form {
-	padding: 20px 20px 10px 50px;
-	position: absolute;
-	width: 100%;
-	z-index: 1000;
+    padding: 20px 20px 10px 50px;
+    position: absolute;
+    width: 100%;
+    z-index: 1000;
 }
 
 .heat-map .map-field-form .filter-reset{
-	margin-right: 10px;
+    margin-right: 10px;
 }
 
 .heat-map .alert {
-	display: none;
-	padding: 6px;
-	margin-top: 3px;
+    display: none;
+    padding: 6px;
+    margin-top: 3px;
 }
 
 .heat-map .olMap {
-	background-color: #b5d0d0;
-	border: 1px solid #bbbbbb;
-	border-radius: 0 0 4px 4px;
-	width: auto !important;
-	height: 100% !important;
-	position: static;
-	margin: 0px -1px 0px -1px !important;
-	/*box-shadow: 0 1px 4px rgba(154, 154, 154, 0.3);*/
+    background-color: #b5d0d0;
+    border: 1px solid #bbbbbb;
+    border-radius: 0 0 4px 4px;
+    width: auto !important;
+    height: 100% !important;
+    position: static;
+    margin: 0px -1px 0px -1px !important;
 }
 
 .heat-map .olControlAttribution{
-	bottom: 0;
-	color: #555;
-	text-shadow: 0 1px 0 rgba(255,255,255,0.7);
+    bottom: 0;
+    color: #555;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.7);
 }
 
 .heat-map .olControlZoom {
-	top: 20px;
-	left: 20px;
+    top: 20px;
+    left: 20px;
 }
 
 .heat-map .olControlZoom a{
-	background-color: rgba(57, 181, 74, 0.7);
-	font-size: 20px;
-	font-family: "Open Sans", Helvetica, arial, sans-serif;
-	line-height: 24px;
+    background-color: rgba(57, 181, 74, 0.7);
+    font-size: 20px;
+    font-family: "Open Sans", Helvetica, arial, sans-serif;
+    line-height: 24px;
 }
 
 .heat-map .olControlZoom a:hover{
-	background-color: rgba(57, 181, 74, 1);
+    background-color: rgba(57, 181, 74, 1);
 }
 
 .heatmap .olPopup {
-	font-size: 12px;
-	z-index: 1060;
+    font-size: 12px;
+    z-index: 1060;
 }
 
 .heatmap .olPopup table {
-	margin: 2px;
+    margin: 2px;
 }
 
 .heatmap .olPopup td, .olPopup th {
-	padding: 2px;
+    padding: 2px;
 }
