--- a/app/css/style.css
+++ b/app/css/style.css
@@ -326,7 +326,7 @@ fieldset[disabled] .btn-primary.active {
 /* Chart dropdown menu */
 
 .chart-options > a{
-    padding: 2px 16px;
+    padding: 2px 0px;
     color: #39b54a;
 }
 .chart-options > a.collapsed{
@@ -341,7 +341,7 @@ fieldset[disabled] .btn-primary.active {
 }
 .chart-options .popover{
     left: auto;
-    right: 20px;
+    right: 5px;
     top: 45px;
     margin-top: 0;
 
@@ -842,14 +842,30 @@ label{
 .visualization-drag-handle {
     cursor: move;
     position: absolute;
-    height: 20px;
+    padding: 0px;
+    height: 25px;
     width: 100%;
     z-index: 1050;
+    opacity: 0;
 }
 
-.visualization-drag-handle:hover {
+.visualization-drag-handle:hover, .visualization-drag-handle:focus {
     background-color: #dddddd;
     opacity: 0.5;
+  /*  border: 1px black solid;*/
+}
+
+.visualization-drag-handle button {
+    margin: 4px 10px;
+    padding: 0px;
+    height: 16px;
+    width: 16px;
+    opacity: 1;
+    z-index: 1065;
+}
+
+.visualization-drag-handle:hover button {
+    opacity: 1;
 }
 
 .gridster {
