NEON-1238: Modifying the visualiation widgets to apply different root styles when in mobile mode so visualizations can style themselves appropriately when running in small form stacked views.

--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -26,6 +26,7 @@
 .heat-map {
     height: 100%;
     width: 100%;
+    min-height: 200px;
 }
 
 .heat-map .legend-item{
@@ -64,6 +65,10 @@
     height: 100% !important;
     position: static;
     margin: 0px -1px 0px -1px !important;
+}
+
+.visualization-widget-mobile .heat-map .olMap {
+    height: 400px !important;
 }
 
 .heat-map .olControlAttribution{
