--- a/app/css/style.css
+++ b/app/css/style.css
@@ -839,6 +839,12 @@ label{
     padding: 0px;
 }
 
+.visualization-widget-mobile {
+    min-height:200px;
+    margin: 0px;
+    padding: 0px;
+}
+
 .visualization-drag-handle {
     cursor: move;
     position: absolute;
