NEON-1238: Adding some styles to the circular heat chart to support gridster's mobile mode.

--- a/app/css/directives/circularHeatForm.css
+++ b/app/css/directives/circularHeatForm.css
@@ -31,3 +31,7 @@
     height: 88%;
     width: 100%;
 }
+
+.visualization-widget-mobile .circularheatform .circularheatchart {
+    height: 400px;
+}
