--- a/app/css/directives/timelineSelector.css
+++ b/app/css/directives/timelineSelector.css
@@ -78,3 +78,9 @@
 	background-color: #C2360D;
 	border-color: #AA1E13;
 }
+
+.visualization-widget-mobile .timeline-selector {
+	display:block;
+	margin: 0px;
+	padding: 20px 20px 20px 20px;
+}
