--- a/app/css/directives/linechart.css
+++ b/app/css/directives/linechart.css
@@ -1,5 +1,7 @@
 .linechart{
-  margin: 0 -30px 0;
+  margin: 0 0 0;
+  min-height: 50px;
+  overflow: hidden;
 }
 .linechart .hover-line line { 
   stroke: #e1e1e1;  
@@ -66,6 +68,24 @@
 .linechart .dot{
   stroke-width: 2px;
 }
+
 .linechart .dot-empty{
   fill: #FFFFFF;
+}
+
+.linechartDirective .well{
+  margin: 0px;
+  padding: 20px;
+  height: 100%;
+  width: 100%;
+}
+
+.visualization-widget .linechartDirective {
+  height: 100%;
+  width: 100%;
+}
+
+.visualization-widget-mobile .linechartDirective {
+  min-height: 400px;
+  width: 100%;
 }
