--- a/app/css/style.css
+++ b/app/css/style.css
@@ -661,6 +661,7 @@ a.navbar-text:focus{
     background-color: #FFFFFF;
     box-shadow: 0 1px 4px rgba(154, 154, 154, 0.3);
     border: 1px solid #D6D6D6;
+    margin: 0px;
     padding: 20px;
     position: relative;
 }
@@ -832,8 +833,8 @@ label{
     Visualizations
 ================ */
 .gridster {
-    margin-left: -10px;
-    margin-right: -10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .gridster-item-resizable-handler {
