--- a/app/css/directives/linechart.css
+++ b/app/css/directives/linechart.css
@@ -59,7 +59,6 @@
   stroke-dasharray: 0;
 }
 
-
 .line {
   fill: none;
   stroke-width: 2px;
@@ -73,7 +72,7 @@
   fill: #FFFFFF;
 }
 
-.linechartDirective .well{
+.linechartDirective {
   margin: 0px;
   padding: 20px;
   height: 100%;
