--- a/app/partials/barchart.html
+++ b/app/partials/barchart.html
@@ -1,1 +1,40 @@
+<div class="chart-options pull-right">
+    <a class="btn btn-lg text-muted collapsed" 
+        data-toggle="collapse" data-target="#chart-options" 
+        data-animation=false
+        ng-click="toggleChartOptions()">
+      <span class="glyphicon glyphicon-cog"></span>
+      <span class="caret"></span>
+    </a>
+    <div id="chart-options" class="popover bottom">
+        <div class="arrow"></div>
+        <div class="popover-content">
+            <div class="form-group">
+                <fieldselector target-var="attrX" label-text="'X axis:'" default-mapping="'bar_x_axis'"></fieldSelector>
+            </div>
+            <div class="form-group">
+                <fieldselector target-var="attrY" label-text="'Y axis:'" default-mapping="'y_axis'"></fieldSelector>
+            </div>
+            <div class="form-group">
+                <select ng-model="barType" class="form-control">
+                    <option value="count">Count</option>
+                    <option value="sum">Sum</option>
+                    <option value="avg">Avg</option>
+                </select>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="legend">
+    <div class="legend-item">
+        <span class="legend-icon" style="background-color: #39b54a"></span>
+        <span class="legend-text" ng-show="barType === 'avg'">Average {{attrY}}</span>
+        <span class="legend-text" ng-show="barType === 'sum'">Sum {{attrY}}</span>
+        <span class="legend-text" ng-show="barType === 'count'">Count</span>
+    </div>
+</div>
+
+<div class="clearfix"></div>
+
 <div class="barchart chart-div"></div>
