NEON-1256: Modifying the OWF widget files to account for the new styles employed by the gridster version of our sample visualizations.

--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -64,7 +64,7 @@
     width: auto !important;
     height: 100% !important;
     position: static;
-    margin: 0px -1px 0px -1px !important;
+   margin: 0px !important;
 }
 
 .heat-map .olControlAttribution{
