NEON-1254: Improving add visualization dialog workflow and styles.

--- a/app/css/directives/addVisualization.css
+++ b/app/css/directives/addVisualization.css
@@ -98,3 +98,14 @@
 .add-visualization-list .selected  span {
     color: #ffffff;
 }
+
+/* Styles for the alert messages. */
+.add-visualization .alert-success {
+    display: inline;
+    font-weight: bold;
+    height: 35px;
+    line-height: 15px;
+    margin: 0px;
+    padding: 10px;
+    width: 400px;
+}
