--- a/app/partials/directives/addVisualization.html
+++ b/app/partials/directives/addVisualization.html
@@ -18,7 +18,7 @@
                             ng-init="item.selected = false" 
                             ng-class="(item.selected) ? 'selected' : ''">
                             <div class="visualization-thumbnail center-block text-center">
-                                <button  ng-click="item.selected = !item.selected" 
+                                <button  ng-click="selectedItem(item, $event)" 
                                     tabindex="0">
                                     <img ng-src="{{(item.icon) ? item.icon : ''}}" 
                                         alt="{{(item.name) ? item.name : ''}}" 
@@ -26,17 +26,15 @@
                                     <span class="text-uppercase small" ng-bind="item.name"></span>
                                 </button>
                             </div>
-                            
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="modal-footer">
+                <div class="alert alert-success pull-left text-left" role="alert" style="display:none"
+                    ng-bind="alertMessage"></div>
                 <button type="button" class="btn btn-default" data-dismiss="modal"
                     ng-click="deselectAll()">Close</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" id="database-table-button"
-                    ng-disabled="selectedTable === null || selectedDb === null" 
-                    ng-click="addVisualizations()">Add</button>
             </div>
         </div>
     </div>
