NEON-1290: Correcting some style issues with the add visualization button.  It was inconsistent with other toolbar buttons

--- a/app/partials/directives/addVisualization.html
+++ b/app/partials/directives/addVisualization.html
@@ -1,8 +1,10 @@
-<div class=" nav navbar-nav add-visualization-button">
-    <a  data-toggle="modal" data-target="#addVisualizationModel" class="dropdown-toggle primary">
-      <span class="glyphicon glyphicon-plus-sign"></span> Add Visualization
-    </a>
-</div>
+<ul class=" nav navbar-nav add-visualization-button">
+    <li>
+        <a  data-toggle="modal" data-target="#addVisualizationModel" class="collapsed dropdown-toggle primary">
+          <span class="glyphicon glyphicon-plus-sign"></span> Add Visualization
+        </a>
+    </li>
+</ul>
 
 <div class="modal fade" id="addVisualizationModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
