--- a/app/partials/directives/addVisualization.html
+++ b/app/partials/directives/addVisualization.html
@@ -20,7 +20,7 @@
                             ng-init="item.selected = false" 
                             ng-class="(item.selected) ? 'selected' : ''">
                             <div class="visualization-thumbnail center-block text-center">
-                                <button  ng-click="selectedItem(item, $event)" 
+                                <button  ng-click="onItemSelected(item)" 
                                     tabindex="0">
                                     <img ng-src="{{(item.icon) ? item.icon : ''}}" 
                                         alt="{{(item.name) ? item.name : ''}}" 
