--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -1,12 +1,13 @@
 <div class="map-field-form">
 
     <div class="chart-options pull-right">
-        <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target="#map-options" data-animation=false
+        <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" 
+            data-target=".{{uniqueChartOptions}} .map-options" data-animation=false
             ng-click="toggleOptionsDisplay()">
           <span class="glyphicon glyphicon-cog"></span>
           <span class="caret"></span>
         </a>
-        <div id="map-options" class="popover bottom">
+        <div class="map-options popover bottom">
             <div class="arrow"></div>
             <div class="popover-content">
                 <form name="mapOptionsform">
