--- a/app/css/directives/tagCloud.css
+++ b/app/css/directives/tagCloud.css
@@ -14,17 +14,7 @@
  *
  */
 
-.tagcloud .filter-tags {
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	border-bottom: 1px solid #e1e1e1;
-}
-.tagcloud .filter-tags .filter-reset{
-	display: inline-block;
-	margin-right: 10px;
-	margin-bottom: 10px;
-}
-.tagcloud{
+.tagcloud {
 	text-align: center;
 	margin: 0 -8px;
 }
@@ -33,7 +23,7 @@
 	padding: 4px 8px;
 	cursor: pointer;
 }
-.tagcloud .tag:hover{
+.tagcloud .tag:hover {
 	color: #333333 !important;
 	text-decoration: none;
 }
@@ -50,4 +40,15 @@
 	overflow-x: hidden;
 	overflow-y: auto;
 	padding: 20px;
+}
+
+.tagcloud-container .filter-tags {
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #e1e1e1;
+}
+.tagcloud-container .filter-tags .filter-reset {
+	display: inline-block;
+	margin-right: 10px;
+	margin-bottom: 10px;
 }
