--- a/app/partials/directives/sunburst.html
+++ b/app/partials/directives/sunburst.html
@@ -1,44 +1,38 @@
 <div class="sunburst-header">
-    <div class="clearfix">
-        <div class="form-inline pull-left">
-            <div class="form-input-group">
-                <!-- <label>Add Ring</label> -->
-                <div>
+    <div class="chart-options pull-right">
+        <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" 
+            data-target=".{{uniqueChartOptions}} .sunburst-options" data-animation=false>
+          <span class="glyphicon glyphicon-cog"></span>
+          <span class="caret"></span>
+        </a>
+        <div class="sunburst-options popover bottom">
+            <div class="arrow"></div>
+            <div class="popover-content">
+                <div class="form-group">
+                    <label>Add a Ring</label>
                     <select class="form-control" ng-model="selectedItem" ng-disabled="!(fields.length > 0)" 
                         ng-options="field for field in fields" ng-change="addGroup()">
-                        <option value="">Add a Ring</option>
+                    <option value="">Add a Ring</option>
+                </select>
+                </div>
+                <div class="form-group">
+                    <label>Value</label>
+                    <select class="form-control" ng-model="arcValue">
+                        <option>Record Count</option>
+                        <option>Field Summation</option>
+                    </select>
+                </div>
+                <div class="form-group"  ng-hide="arcValue === 'Record Count'">
+                    <label>Value Field</label>
+                    <select class="form-control" ng-model="valueField"
+                        ng-options="field for field in fields">
+                        <option value="">Select a Field</option>
                     </select>
                 </div>
             </div>
         </div>
-
-        <div class="chart-options pull-right">
-            <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" 
-                data-target=".{{uniqueChartOptions}} .sunburst-options" data-animation=false>
-              <span class="glyphicon glyphicon-cog"></span>
-              <span class="caret"></span>
-            </a>
-            <div class="sunburst-options popover bottom">
-                <div class="arrow"></div>
-                <div class="popover-content">
-                    <div class="form-group">
-                        <label>Value</label>
-                        <select class="form-control" ng-model="arcValue">
-                            <option>Record Count</option>
-                            <option>Field Summation</option>
-                        </select>
-                    </div>
-                    <div class="form-group"  ng-hide="arcValue === 'Record Count'">
-                        <label>Value Field</label>
-                        <select class="form-control" ng-model="valueField"
-                            ng-options="field for field in fields">
-                            <option value="">Select a Field</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
+
     <div class="sunburst-ring-controls">
         <!-- <div class="sunburst-breadcrumb">
             <span ng-bind="tableName"></span>
@@ -58,5 +52,7 @@
         </div>
     </div>
 </div>
+
+<div class="clearfix"></div>
 <div class="sunburst-tooltip"></div>
 <div class="sunburst-chart"></div>
