NEON-1299: Refactoring the sunburst chart code to be a little more robust and support multiple instances in the same page.  Also refactoring how the controls where done in its associated angular directive.

--- a/app/css/directives/sunburst.css
+++ b/app/css/directives/sunburst.css
@@ -9,6 +9,7 @@
 
 .sunburst-ring-controls  {
   width:100%;
+  margin-bottom: 10px;
 }
 
 .sunburst-breadcrumb {
@@ -42,10 +43,8 @@
   display: inline;
 }
 
-.sunburst-ring-controls .filter-reset {
-  display: inline-block;
-  margin-right: 0px;
-  margin-bottom: 5px;
+.sunburst-aggregate-controls {
+  margin: 0px 0px 10px 0px;
 }
 
 .sunburst-chart path {
