--- a/app/partials/directives/sunburst.html
+++ b/app/partials/directives/sunburst.html
@@ -15,13 +15,6 @@
                     <option value="">Add a Ring</option>
                 </select>
                 </div>
-                <div class="form-group">
-                    <label>Value</label>
-                    <select class="form-control" ng-model="arcValue">
-                        <option>Record Count</option>
-                        <option>Field Summation</option>
-                    </select>
-                </div>
                 <div class="form-group"  ng-hide="arcValue === 'Record Count'">
                     <label>Value Field</label>
                     <select class="form-control" ng-model="valueField"
@@ -33,7 +26,7 @@
         </div>
     </div>
 
-    <div class="sunburst-ring-controls">
+    <div class="sunburst-ring-controls" ng-show="groupFields.length > 0">
         <!-- <div class="sunburst-breadcrumb">
             <span ng-bind="tableName"></span>
             <span class="glyphicon glyphicon-chevron-right"></span>
@@ -48,11 +41,22 @@
             <span class="glyphicon glyphicon-chevron-right"></span>
         </div>
         <div class="sunburst-breadcrumb">
-            <span ng-bind="(arcValue === 'Record Count') ? arcValue : 'SUM (' + valueField + ')'"></span>
+            <span ng-bind="(arcValue === 'count') ? arcValue : 'TOTAL (' + valueField + ')'"></span>
         </div>
     </div>
+
+    <div class="sunburst-aggregate-controls" ng-show = "valueField">
+        <form>
+            <label><input type="radio" ng-model="arcValue" value="count" class="sunburst-chart-selector"> 
+                Count
+            </label>
+            <label><input type="radio" ng-model="arcValue" value="total" class="sunburst-chart-selector"
+                ng-disabled="!(valueField)"> 
+                <span ng-bind="(valueField) ? 'TOTAL (' + valueField + ')' : 'TOTAL ()'"></span>
+            </label>
+        </form>
+    </div>
 </div>
-<!-- 
-<div class="clearfix"></div> -->
+
 <div class="sunburst-tooltip"></div>
 <div class="sunburst-chart"></div>
