Locking the barchart at 400px height when in mobile mode to avoid some excessive resizing issues.

--- a/app/css/directives/barchart.css
+++ b/app/css/directives/barchart.css
@@ -169,6 +169,7 @@ svg .tick {
 
 .visualization-widget-mobile .barchartDirective {
   min-height: 400px;
+  max-height: 400px;
   width: 100%;
 }
 
