For all columns to appear, remove the stroke-width;  let it be auto-set

--- a/app/css/directives/barchart.css
+++ b/app/css/directives/barchart.css
@@ -40,7 +40,7 @@ svg .tick {
 .bar {
     /** provides a slight separation for adjacent bars. the barchart javascript sets the color based on the svg color */
     fill: #39b54a;
-    stroke-width: 6;
+    /* stroke-width: 6; */
     stroke-opacity: 1;
 }
 
