Fix 1309 - Add x axis label to legend

--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -38,6 +38,7 @@
 		<span class="legend-text" ng-show="barType === 'avg'">Average {{attrY}}</span>
 		<span class="legend-text" ng-show="barType === 'sum'">Sum {{attrY}}</span>
 		<span class="legend-text" ng-show="barType === 'count'">Count</span>
+		<span class="legend-text" >vs {{attrX}}</span>
 	</div>
 </div>
 
