NEON-1297 Allowing each tag cloud to have their own options menu.

--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -5,12 +5,12 @@
     <h4 class="sr-only">Popular Hashtags</h4>
     <div class="filter-tags" ng-class="{true: '', false: 'hidden'}[showFilter]">
         <div class="chart-options pull-right">
-            <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target="#tag-options" data-animation=false
+            <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target=".{{uniqueChartOptions}} .tag-cloud-options" data-animation=false
               ng-click="toggleOptionsDisplay()">
               <span class="glyphicon glyphicon-cog"></span>
               <span class="caret"></span>
             </a>
-            <div id="tag-options" class="popover bottom">
+            <div class="popover bottom tag-cloud-options">
                 <div class="arrow"></div>
                 <div class="popover-content">
                     <div class="form-group">
