--- a/app/css/directives/countBy.css
+++ b/app/css/directives/countBy.css
@@ -48,6 +48,16 @@
 .count-by-grid .slick-row.odd{
 	background: #F1F1F1;
 }
+
+.count-by-grid.filtered .slick-row {
+    opacity: 0.5;
+}
+
+.count-by-grid .slick-row.active {
+    background: #88d292;
+    opacity: 1.0;
+}
+
 .count-by-grid .slick-header{
 	border-top: 0;
 }
@@ -125,3 +135,9 @@
   height: 400px;
   width: 100%;
 }
+
+.filter-reset {
+    margin-bottom: 5px;
+    margin-right: 15px;
+}
+
