--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -1,4 +1,13 @@
 <div class="count-by-header row">
+    <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]">
+        {{filterSet.key}}={{filterSet.value}}
+        <a class="btn" ng-click="clearFilter()">
+            <span class="glyphicon glyphicon-remove"></span>
+        </a>
+    </div>
+
+    <div class="clearfix"></div>
+
 	<div class="count-by-field-label col-xs-4">
 		<h4 class="pull-left">Count Field</h4>
 	</div>
