NEON-1274 Removing a colon from a dropdown to match previously determined style standards.

--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="count-by-field-selector col-xs-8">
 		<select class="form-control" ng-model="countField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields">
-            <option disabled selected value="">Please choose a field:</option>
+            <option disabled selected value="">Please choose a field</option>
 		</select>
 	</div>
 </div>
