NEON-1314 Minor changes requested during code review.

--- a/app/css/directives/countBy.css
+++ b/app/css/directives/countBy.css
@@ -53,6 +53,7 @@
     opacity: 0.5;
 }
 
+/* Will override opacity 0.5 rule due to specificity and cascade. */
 .count-by-grid .slick-row.active {
     background: #88d292;
     opacity: 1.0;
