NEON-1315 All filters in TagCloud widget are now right-aligned (like filters in the other widgets).

--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -30,12 +30,13 @@
                 </div>
             </div>
         </div>
-        <div class="filter-reset" ng-repeat="tagName in filterTags">
+        <div class="filter-reset pull-right" ng-repeat="tagName in filterTags">
             {{tagName}}
             <a class="btn" ng-click="removeFilter(tagName)">
              <span class="glyphicon glyphicon-remove"></span>
             </a>
         </div>
+        <div class="clearfix"></div>
     </div>
     <div class="tagcloud">
         <a ng-click="addTagFilter(tagCount.tag)" class="tag" 
