NEON-1316 The filter in the BarChart widget now displays the field and value of the filter instead of just the word Filter.

--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]">
-  Filter
+    {{filterSet.key}}={{filterSet.value}}
   <a class="btn" ng-click="clearFilterSet()">
     <span class="glyphicon glyphicon-remove"></span>
   </a>
