NEON-1348 The Count By visualization now displays the total number of fields currently contained within its table.

--- a/app/css/directives/countBy.css
+++ b/app/css/directives/countBy.css
@@ -20,6 +20,15 @@
   width: 100%;
 }
 
+.count-by-header {
+    margin-bottom: 5px;
+}
+
+.count-by-field-count {
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+
 .data-tray .refresh{
     margin-left: 10px;
 }
