--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -15,6 +15,9 @@
     </div>
 
     <div class="btn-group pull-right">
+      <label class="btn btn-default" ng-class="{true: 'active', false: ''}[granularity === 'year']">
+        <input type="radio" style="display:none" ng-model="granularity" value="year"> Year
+      </label>
       <label class="btn btn-default" ng-class="{true: 'active', false: ''}[granularity === 'month']">
         <input type="radio" style="display:none" ng-model="granularity" value="month"> Month
       </label>
@@ -38,10 +41,12 @@
   <span ng-bind="(startDateForDisplay && granularity === 'hour') ? (startDateForDisplay.toISOString() | date: 'MMM d, yyyy HH:mm') : ''"></span>
   <span ng-bind="(startDateForDisplay && granularity === 'day') ? (startDateForDisplay.toISOString() | date: 'MMMM d, yyyy') : ''"></span>
   <span ng-bind="(startDateForDisplay && granularity === 'month') ? (startDateForDisplay.toISOString() | date: 'MMMM yyyy') : ''"></span>
+  <span ng-bind="(startDateForDisplay && granularity === 'year') ? (startDateForDisplay.toISOString() | date: 'yyyy') : ''"></span>
   <span ng-bind="(endDateForDisplay) ? ' to ' : ''"></span>
   <span ng-bind="(endDateForDisplay && granularity === 'hour') ? (endDateForDisplay.toISOString() | date:'MMM d, yyyy HH:mm') : ''"></span>
   <span ng-bind="(endDateForDisplay && granularity === 'day') ? (endDateForDisplay.toISOString() | date:'MMMM d, yyyy') : ''"></span>
   <span ng-bind="(endDateForDisplay && granularity === 'month') ? (endDateForDisplay.toISOString() | date: 'MMMM yyyy') : ''"></span>
+  <span ng-bind="(endDateForDisplay && granularity === 'year') ? (endDateForDisplay.toISOString() | date: 'yyyy') : ''"></span>
   <span ng-bind="(startDateForDisplay) ? '(Z)' : ''"></span></h4>
 
   <div class="collapsed" ng-class="{true: 'collapsed', false: ''}[collapsed]">
